# CrystalVision

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE.md  README.md  docker-compose.yml  dockerfile  gatherdata.py  generatemodels.py  project.ipynb  pyproject.toml  pytest.ini  requirements.txt  wsl-setup.sh
_tensorflow/: pyproject.toml
_torch/: pyproject.toml
crystalvision/: app.py  create_ensemble.py  discordbot.py  generatemodels.py  generatemodels2.py  missing_cards.json  testmodels.json  testmodels.py
crystalvision/data/: __init__.py  base.py  card_database.py  dataset.py  gather.py
crystalvision/detection/: detect.py  labelconvert.py  segment.py  train.py
crystalvision/lang/: __init__.py  df_description.json  docs.py  loaders.py  tools.py
crystalvision/models/: __init__.py  base.py  callbacks.py  card_type.py  costs.py  elements.py  ensemble.yml  icons.py  layers.py  metrics.py  multioutput.py  power.py  tune.yml  visualize.ipynb
crystalvision/models/ext/: __init__.py  callbacks.py  ensemble.py  layers.py  metrics.py
crystalvision/models/lang/: df_description.json  explore_df_agent.ipynb  explore_rag_agent.ipynb  loaders.py
crystalvision/models/mixins/: __init__.py  compiles.py  objective.py  tuners.py
debug/: debug_score.py
docker/: Dockerfile.discordbot
src/: freezegraph.py  gatherdata.py  generatemodels.py  missing_cards.json  testfrozen.py  testmodels.json  testmodels.py
src/data/: __init__.py  dataset.py  gather.py
src/models/: __init__.py  card_type.py  elements.py  ensemble.py  visualize.ipynb
tests/: __init__.py  conftest.py  test_data_dataset.py  test_models_element.py  test_models_element_v2.py  test_models_ensemble.py  test_models_layers.py  test_models_multioutput.py
